2011-05-26 Lorenzo Natale <lorenzo.natale@iit.it>
    * CMakeLists.txt: iCub now requires YARP 2.3.4

2011-05-26 Randazzo Marco <marco.randazzo@iit.it>
	* main/src/core/iCubInterface/ControlBoardWrapper2.cpp
	* main/src/core/iCubInterface/ControlBoardWrapper2.h
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
	* main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.h
	- The following methods of yarp::dev::IImpedanceControl have been deprecated:
	bool getImpedance(int j, double *stiffness, double *damping, double *offset)
	bool setImpedance(int j, double stiffness,  double damping,  double offset)
	Instead, use the new methods:
	bool getImpedance(int j, double *stiffness, double *damping)
	bool setImpedance(int j, double stiffness,  double damping)
	THIS MODIFICATION REQUIRES A YARP UPDATE
	
2011-05-17 Randazzo Marco <marco.randazzo@iit.it>
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
    released new version of CanBusMotionControl with improved parsing of .ini files (by LorenzoNatale)

2011-05-17 Lorenzo Natale <lorenzo.natale@iit.it>
    * CMakeLists.txt:
    - workaround for cmake 2.6.0 in checking YARP version

2011-05-13 Lorenzo Natale <lorenzo.natale@iit.it>
    * CMakeLists.txt:
    - enable strict check of YARP version
    now requires YARP version 2.3.3
    
    - ICUB_CANPROTOCOL_STRICT now default is true
    
2011-05-13 Lorenzo Natale <lorenzo.natale@iit.it>
    * app/iCubCluster/scripts/icub-cluster.py:
    * app/iCubCluster/scripts/cluster-config.xml.template
    Improved support for setting the value of the DISPLAY variable. Handle default
    for backward compatibility. Print short error message when executed with incorrect 
    number of parameters. Fixed template xml.

2011-05-13 Lorenzo Natale <lorenzo.natale@iit.it>
    * Starting log. Previous changes logged in root of repository ChangeLog.txt
